Fix on mobile view

--- a/PaperWorld/src/components/animatedBack.css
+++ b/PaperWorld/src/components/animatedBack.css
@@ -37,7 +37,7 @@
   animation: raise1 11s linear infinite;
   animation-delay: -1s;
   transform: scale(-0.3) rotate(259deg);
-  z-index: -6;
+  /* z-index: -6; */
   filter: blur(-5px);
 }
 @keyframes raise1 {
@@ -52,7 +52,7 @@
   animation: raise2 11s linear infinite;
   animation-delay: -4s;
   transform: scale(0) rotate(293deg);
-  z-index: -5;
+  /* z-index: -5; */
   filter: blur(-4px);
 }
 @keyframes raise2 {
@@ -67,7 +67,7 @@
   animation: raise3 12s linear infinite;
   animation-delay: -2s;
   transform: scale(0.3) rotate(210deg);
-  z-index: -4;
+  /* z-index: -4; */
   filter: blur(-3px);
 }
 @keyframes raise3 {
@@ -82,7 +82,7 @@
   animation: raise4 13s linear infinite;
   animation-delay: -1s;
   transform: scale(0.6) rotate(43deg);
-  z-index: -3;
+  /* z-index: -3; */
   filter: blur(-2px);
 }
 @keyframes raise4 {
@@ -97,7 +97,7 @@
   animation: raise5 13s linear infinite;
   animation-delay: -3s;
   transform: scale(0.9) rotate(304deg);
-  z-index: -2;
+  /* z-index: -2; */
   filter: blur(-1px);
 }
 @keyframes raise5 {
@@ -112,7 +112,7 @@
   animation: raise6 20s linear infinite;
   animation-delay: -2s;
   transform: scale(1.2) rotate(107deg);
-  z-index: -1;
+  /* z-index: -1; */
   filter: blur(0px);
 }
 @keyframes raise6 {
