--- a/PaperWorld/src/components/register.css
+++ b/PaperWorld/src/components/register.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 10px 35px 0px 35px;
+    margin: 60px 35px 0px 35px;
 }
 .title{
     font-size: 2.5rem;
